--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".ui.loginActivity.LoginActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".ui.signupActivity.SignupActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
