--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -25,6 +27,10 @@
         </activity>
         <activity
             android:name=".ui.signupActivity.SignupActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ui.homeActivity.HomeActivity"
             android:exported="true">
         </activity>
     </application>
